--- a/app/views/searches/_footer.html.erb
+++ b/app/views/searches/_footer.html.erb
@@ -3,4 +3,13 @@
     <li><%= link_to "About", about_path %></li>
     <li><%= link_to "Terms of Use", policies_path %></li>
   </ul>
+  <div>
+    <%= image_tag "neh_logo_horizontal_rgb", alt: "NEH Logo" %>
+    <p>
+      This Website has been made possible in part by the National Endowment for
+      the Humanities. Any views, findings, conclusions or recommendations
+      expressed in this project do not necessarily represent those of the
+      National Endowment for the Humanities.
+    </p>
+  </div>
 </footer>
