Store and use venue_full_names on generic files
We still search by venue_names, but we display venue_full_names
everywhere.  This is a temporary solution until we can figure out how
to properly index and search full names.

--- a/app/views/searches/images.html.erb
+++ b/app/views/searches/images.html.erb
@@ -27,7 +27,7 @@
       <figcaption>
         <h3><%= image.title.first %></h3>
         <p><%= image.production_names.join(',') %></p>
-        <p><%= image.venue_names.join(',') %></p>
+        <p><%= image.venue_full_names.join(',') %></p>
         <p><%= image.description.first %></p>
         <p><%= formatted_creation_date(image) %></p>
       </figcaption>
