Extract partials for individual search result items

--- a/app/views/searches/audios.html.erb
+++ b/app/views/searches/audios.html.erb
@@ -1,14 +1,10 @@
 <div data-page="<%= @audios.next_page %>" data-more="<%= @audios.show_more? %>">
   <div id="audios">
     <% @audios.files.each do |audio| %>
-    <li>
-      <audio controls preload="none">
-        <source src="<%= sufia.download_path(audio) %>" />
-      </audio>
-    </li>
+      <%= render partial: "audio", object: audio %>
     <% end %>
   </div>
-  
+
   <div class="paging">
     <% if @audios.show_more? %>
     <a href="#" class="js-load-more-audios" data-page="<%= @audios.next_page %>">Load More</a>
