--- a/app/views/searches/images.html.erb
+++ b/app/views/searches/images.html.erb
@@ -1,38 +1,13 @@
 <div data-page="<%= @images.next_page %>" data-more="<%= @images.show_more? %>" data-total-items="<%= @images.total_items %>">
   <ul id="thumbnails">
   <% @images.files.each do |image| %>
-  <li class="card-container">
-    <a class="card card--has-image card--overlay-content">
-      <figure class="card__figure">
-        <img class="card__figure__image" src="<%= sufia.download_path(image, file: 'thumbnail') %>" alt="<%= image.title.first %>" />
-      </figure>
-      <div class="card__content">
-        <h1 class="card__content__title">
-          <%= image.title.first %>
-        </h1>
-        <p class="card__content__date">
-          <%= formatted_creation_date(image) %>
-        </p>
-      </div>
-    </a>
-  </li>
+    <%= render partial: "image_thumbnail", locals: { image: image } %>
   <% end %>
   </ul>
 
   <ul id="slideshow">
   <% @images.files.each do |image| %>
-  <li>
-    <figure>
-      <img class="slideshow-img" src="<%= sufia.download_path(image) %>" alt="<%= image.title.first %>" />
-      <figcaption>
-        <h3><%= image.title.first %></h3>
-        <p><%= image.production_names.join(',') %></p>
-        <p><%= image.venue_full_names.join(',') %></p>
-        <p><%= image.description.first %></p>
-        <p><%= formatted_creation_date(image) %></p>
-      </figcaption>
-    </figure>
-  </li>
+    <%= render partial: "image_slideshow", locals: { image: image } %>
   <% end %>
   </ul>
 
