DOM changes to support hiding items until fully loaded
* Add a placeholder div for showing a loading spinner
* Initially hide the paging div
* Initially hide each search result item

Hiding the videos doesn’t currently work, likely because of how the
video grid widget works.  We’ll fight this once the design work is
done, since we may not even be using that widget once that happens.

--- a/app/views/searches/_article.html.erb
+++ b/app/views/searches/_article.html.erb
@@ -1,4 +1,4 @@
-<li class="card-container">
+<li class="card-container is-hidden">
   <a class="card card--has-img" target=_blank href=<%= sufia.download_path(article) %>>
     <div class="card-figure-img">
       <img src="<%= sufia.download_path(article, file: 'thumbnail') %>" alt="<%= article.title.first %>">
