--- a/app/views/searches/_article_unreadable.html.erb
+++ b/app/views/searches/_article_unreadable.html.erb
@@ -1,4 +1,4 @@
-<li class="card-container">
+<li class="card-container is-hidden">
   <div class="card-figure-img">
     <%= image_tag "unreadable_item", alt: "Unreadable Item" %>
   </div>
