--- a/app/views/searches/_image_thumbnail.html.erb
+++ b/app/views/searches/_image_thumbnail.html.erb
@@ -1,4 +1,4 @@
-<li class="card-container">
+<li class="card-container is-hidden">
   <a class="card card--has-image card--overlay-content">
     <figure class="card__figure">
       <img class="card__figure__image" src="<%= sufia.download_path(image, file: 'thumbnail') %>" alt="<%= image.title.first %>" />
