--- a/app/views/searches/_video.html.erb
+++ b/app/views/searches/_video.html.erb
@@ -1,4 +1,4 @@
-<li class="js-video-container card-container">
+<li class="js-video-container card-container is-hidden">
   <a class="js-video card card--has-img card--overlay-content" data-webm=<%= sufia.download_path(video, datastream_id: 'webm') %> data-mp4=<%= sufia.download_path(video, datastream_id: 'mp4') %> data-title=<%= video.title.first %>
      data-description=<%= video.description %> data-description=<%= video.venue_full_names %>>
      <div class="card-figure-img">
