--- a/app/views/searches/_video_unreadable.html.erb
+++ b/app/views/searches/_video_unreadable.html.erb
@@ -1,4 +1,4 @@
-<li class="js-video-container card-container">
+<li class="js-video-container card-container is-hidden">
   <div class="card-figure-img">
     <div class="card-figure-img-wrapper">
       <!-- <img src="<%= sufia.download_path(video, file: 'thumbnail') %>" alt="<%= video.title.first %>" /> -->
