--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -11,7 +11,8 @@
     <section class="grid-wrap">
       <ul class="grid card-grid"></ul>
     </section>
-    <div class="paging"></div>
+    <div class="loading"><p>Loading...</p></div>
+    <div class="paging is-hidden"></div>
     <section class="slideshow">
       <ul></ul>
       <nav>
