--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -7,5 +7,6 @@
   </div>
   <h2 class="results-section-title">Videos</h2>
   <ul class="js-videos-grid videos-grid"></ul>
-  <div class="paging"></div>
+  <div class="loading"><p>Loading...</p></div>
+  <div class="paging is-hidden"></div>
 </section>
