Refactor search results DOM for greater consistency

--- a/app/views/searches/_articles.html.erb
+++ b/app/views/searches/_articles.html.erb
@@ -7,7 +7,7 @@
   </div>
   <h2 class="results-section-title">Documents</h2>
   <div class="card-grid">
-    <ul></ul>
+    <ul class="js-results"></ul>
   </div>
   <div class="paging"></div>
 </section>
