--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -6,6 +6,6 @@
     <p class="file-type-count"><%= @videos.total_items %></p>
   </div>
   <h2 class="results-section-title">Videos</h2>
-  <ul class="js-videos-grid videos-grid"></ul>
+  <ul class="js-videos-grid videos-grid js-results"></ul>
   <div class="paging"></div>
 </section>
