--- a/app/views/searches/audios.html.erb
+++ b/app/views/searches/audios.html.erb
@@ -11,7 +11,7 @@
 
   <div class="paging">
     <% if @audios.show_more? %>
-    <a href="#" class="js-load-more-audios" data-page="<%= @audios.next_page %>">Load More</a>
+    <a href="#" class="js-load-more" data-page="<%= @audios.next_page %>">Load More</a>
     <% end %>
   </div>
 </div>
