--- a/app/views/searches/images.html.erb
+++ b/app/views/searches/images.html.erb
@@ -1,5 +1,5 @@
 <div data-page="<%= @images.next_page %>" data-more="<%= @images.show_more? %>" data-total-items="<%= @images.total_items %>">
-  <ul id="thumbnails">
+  <ul id="images">
   <% @images.files.each do |image| %>
     <%= render partial: "image_thumbnail", locals: { image: image } %>
   <% end %>
@@ -13,7 +13,7 @@
 
   <div class="paging">
     <% if @images.show_more? %>
-      <a href="#" class="js-load-more-images" data-page="<%= @images.next_page %>">Load More</a>
+      <a href="#" class="js-load-more" data-page="<%= @images.next_page %>">Load More</a>
     <% end %>
   </div>
 </div>
