--- a/app/views/searches/videos.html.erb
+++ b/app/views/searches/videos.html.erb
@@ -11,7 +11,7 @@
 
   <div class="paging">
     <% if @videos.show_more? %>
-    <a href="#" class="js-load-more-videos" data-page="<%= @videos.next_page %>">Load More</a>
+    <a href="#" class="js-load-more" data-page="<%= @videos.next_page %>">Load More</a>
     <% end %>
   </div>
 </div>
