--- a/app/views/searches/_audios.html.erb
+++ b/app/views/searches/_audios.html.erb
@@ -7,7 +7,7 @@
   </div>
   <h2 class="results-section-title">Audio</h2>
   <div class="audios-grid">
-    <ul></ul>
+    <ul class="js-results"></ul>
   </div>
   <div class="paging"></div>
 </section>
