--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -9,11 +9,11 @@
 
   <div id="grid-gallery" class="grid-gallery">
     <section class="grid-wrap">
-      <ul class="grid card-grid"></ul>
+      <ul class="grid card-grid js-results"></ul>
     </section>
     <div class="paging"></div>
     <section class="slideshow">
-      <ul></ul>
+      <ul class="js-slideshow"></ul>
       <nav>
         <span class="icon nav-prev"></span>
         <span class="icon nav-next"></span>
