--- a/app/views/searches/articles.html.erb
+++ b/app/views/searches/articles.html.erb
@@ -11,7 +11,7 @@
 
   <div class="paging">
     <% if @articles.show_more? %>
-    <a href="#" class="js-load-more-articles" data-page="<%= @articles.next_page %>">Load More</a>
+    <a href="#" class="js-load-more" data-page="<%= @articles.next_page %>">Load More</a>
     <% end %>
   </div>
 </div>
