--- a/app/assets/stylesheets/modules/_images.scss
+++ b/app/assets/stylesheets/modules/_images.scss
@@ -298,6 +298,10 @@ span.nav-close:before {
     &:hover {
       background-color: darken(#0182c5, 5%);
     }
+
+    &.is-disabled {
+      background-color: $neutral-mid;
+    }
   }
 }
 
