Use Chosen library for production credit selectors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require openseadragon
  *= require blacklight_gallery
  *= require_self
+ *= require chosen
  *= require sufia
  *= require_tree ./overrides
  */
