--- a/app/views/records/edit_fields/_production_ids.html.erb
+++ b/app/views/records/edit_fields/_production_ids.html.erb
@@ -1,5 +1,5 @@
 <%= f.input :production_ids,
-      label: "Productions",
+      label: "Production(s)",
       as: :select,
       collection: productions_for_select,
       input_html: {
