Change venues label to venue(s) [ci skip]

--- a/app/views/records/edit_fields/_venue_ids.html.erb
+++ b/app/views/records/edit_fields/_venue_ids.html.erb
@@ -1,5 +1,5 @@
 <%= f.input :venue_ids,
-      label: "Venues",
+      label: "Venue(s)",
       as: :select,
       collection: venues_for_select,
       input_html: {
