Allow toggling between full date and year only
This is the front-end part of the job.  This commit adds a checkbox
that toggles between a date selector and a year selector.

--- a/app/assets/stylesheets/overrides/sufia.css.scss
+++ b/app/assets/stylesheets/overrides/sufia.css.scss
@@ -1,3 +1,7 @@
+.is-hidden {
+  display: none;
+}
+
 #home_header {
   background: image-url("home_bg.jpg") center 100% no-repeat;
   background-size: cover;
